# consulite

./: Cargo.toml  README.md  compose.yaml
.github/workflows/: rust.yml
src/: lib.rs  prelude.rs
