[package]
name = "consulite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
